--- a/scss/navbar.scss
+++ b/scss/navbar.scss
@@ -1,24 +1,31 @@
 .level_0 {
-    @extend .navbar-nav, , .mr-auto;
+  @extend .navbar-nav, , .mr-auto;
+
 }
 
-.level_0>.parent:hover>.level_1 {
-    @extend .show
+.level_0 > .parent:hover > .level_1 {
+  @extend .show;
+  height: auto;
+  opacity: 1
 }
 
-.level_0>li {
-    @extend .dropdown
+.level_0 > li {
+  @extend .dropdown;
 }
 
-.level_0>.parent>a {
-    @extend .nav-link, .dropdown-toggle
+.level_0 > .parent > a {
+  @extend .nav-link, .dropdown-toggle, .text-white;
+  pointer-events: none;
 }
 
 .level_1 {
-    @extend .dropdown-menu;
-    margin-top: 0 !important;
+  @extend .dropdown-menu;
+  margin-top: 0 !important;
+  height: 0;
+  opacity: 0;
+  transition: all 1s ease;
 }
 
 .level_1 a {
-    @extend .dropdown-item;
+  @extend .dropdown-item;
 }
