--- a/scss/navbar.scss
+++ b/scss/navbar.scss
@@ -5,7 +5,7 @@
     & > .parent {
       @extend .dropdown;
 
-      & > .link {
+      & > .navbar-link {
         @extend .nav-link, .dropdown-toggle, .text-white;
         cursor: pointer;
       }
@@ -15,7 +15,7 @@
 
         .item {
 
-          .link {
+          .navbar-link {
             @extend .dropdown-item;
             min-width: 40vh;
             white-space: normal !important;
