--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -1,85 +1,77 @@
-@use 'sass:math';
+@use "sass:math";
 
-@import '../node_modules/bootstrap/scss/functions';
-@import '../node_modules/bootstrap/scss/variables';
+@import "../node_modules/bootstrap/scss/functions";
+@import "../node_modules/bootstrap/scss/variables";
 @import "../node_modules/bootstrap/scss/mixins";
-@import 'colors.scss';
-@import 'navbar.scss';
-@import 'nav-tabs.scss';
-@import 'yandex-search.scss';
-@import 'ajax-tabs.scss';
-@import 'post_content.scss';
-@import 'footer.scss';
-@import 'main-aside.scss';
-@import 'sizing.scss';
-@import 'card.scss';
-@import 'borders.scss';
+@import "colors.scss";
+@import "themes.scss";
+@import "yandex-search.scss";
+@import "navbar.scss";
+@import "nav-tabs.scss";
+@import "ajax-tabs.scss";
+@import "post_content.scss";
+@import "footer.scss";
+@import "main-aside.scss";
+@import "sizing.scss";
+@import "card.scss";
+@import "borders.scss";
 
 $enable-responsive-font-sizes: true;
-body{
-    @extend body;
-    @include rfs(20);
+body {
+  @extend body;
+  @include rfs(20);
 }
-
-
-body.pureVis * {
-    background: black !important;
-    color: white !important;
-}
-
-
 
 @for $i from 1 through 10 {
-    h#{$i}{
-        $h-offset : math.floor(calc((10 - $i) / 2));
-        @extend .my-#{$h-offset};
-    }
+  h#{$i} {
+    $h-offset: math.floor(calc((10 - $i) / 2));
+    @extend .my-#{$h-offset};
+  }
 }
 
 .ar-1 {
-    aspect-ratio: 1;
+  aspect-ratio: 1;
 }
 
 .ar-4-3 {
-    aspect-ratio: 4/3;
+  aspect-ratio: 4/3;
 }
 
 .ar-16-9 {
-    aspect-ratio: 16/9;
+  aspect-ratio: 16/9;
 }
 
-
 $grid-breakpoints: (
-    xs: 0,
-    sm: 576px,
-    md: 768px,
-    lg: 992px,
-    xl: 1200px
+  xs: 0,
+  sm: 576px,
+  md: 768px,
+  lg: 992px,
+  xl: 1200px,
 );
 
 $container-max-widths: (
-    sm: 540px,
-    md: 720px,
-    lg: 960px,
-    xl: 1140px
+  sm: 540px,
+  md: 720px,
+  lg: 960px,
+  xl: 1140px,
 );
 
 .module {
-    @extend .my-4;
+  @extend .my-4;
 
-    &:first-child {
-        @extend .mt-0;
-    }
+  &:first-child {
+    @extend .mt-0;
+  }
 
-    &:last-child {
-        @extend .mb-0;
-    }
+  &:last-child {
+    @extend .mb-0;
+  }
 }
 
-@media (min-width:1600px) {
-    .container-fluid {
-        max-width: 1550px;
-    }
+@media (min-width: 1600px) {
+  .container-fluid {
+    max-width: 1550px;
+  }
 }
 
-@import '../node_modules/bootstrap/scss/bootstrap'
+@import "../node_modules/bootstrap/scss/bootstrap";
