added 4 pure vision themes

--- a/scss/navbar.scss
+++ b/scss/navbar.scss
@@ -6,8 +6,9 @@
       @extend .dropdown;
 
       & > .navbar-link {
-        @extend .nav-link, .dropdown-toggle, .text-white;
+        @extend .nav-link, .dropdown-toggle;
         cursor: pointer;
+        color: white;
       }
 
       & > .level_1 {
@@ -23,7 +24,7 @@
             list-style-type: disc;
 
             &.active {
-              background-color: theme-color("primary") !important;
+              @extend .bg-primary;
             }
           }
         }
