--- a/scss/themes.scss
+++ b/scss/themes.scss
@@ -1,46 +1,53 @@
 @use "sass:color";
+@import "./theming/mono-theme.scss";
+
 $mytheme-colors: (
-  "white": white,
-  "black": black,
-  "columbia-blue": #9dd1ff,
-  "beige": #f7f3d6,
+  "white": (
+    light: white,
+    dark: black,
+  ),
+  "black": (
+    light: black,
+    dark: white,
+  ),
+  "columbiaBlue": (
+    light: #9dd1ff,
+    dark: #063462,
+  ),
+  "beige": (
+    light: #f7f3d6,
+    dark: #4d4b43,
+  ),
 );
 
 @each $color-name, $color in $mytheme-colors {
-  $invert-color: invert($color);
-  @debug "c: #{$color}; i: #{$invert-color} ";
-  body[data-theme="#{$color-name}"] {
-    .bg-light,
-    .btn-light,
-    *[class*="btn-outline-"] {
-      background-color: $color !important;
-    }
-
-    .border {
-      border-color: $color !important;
-    }
-
-    .btn-light,
-    .text-dark {
-      @if color.lightness($color) > 50 {
-        color: #000 !important;
-      } @else {
-        color: #fff !important;
-      }
-    }
-
-    .btn-dark,
-    .btn-primary,
-    .bg-dark,
-    .bg-primary {
-      background-color: $invert-color !important;
-    }
-
-    .btn-dark,
-    .btn-primary
-    .text-light,
-    .text-white{
-      color: $color !important;
-    }
+  body[data-theme="#{$color-name}"].pureVis {
+    @include theme-mono(map-get($color, "dark"), map-get($color, "light"));
   }
+
+  .btn-#{$color-name} {
+    color: map-get($color, "dark") !important;
+    background-color: map-get($color, "light") !important;
+  }
+}
+
+#pureVis-settings {
+  display: none !important;
+}
+
+body:not(.pureVis) #pureVis-off,
+body:not(.pureVis) #pureVis-settingsBtn {
+  display: none !important;
+}
+body:not(.pureVis) #pureVis-on {
+  display: block !important;
+}
+
+body.pureVis #pureVis-settings.show,
+body.pureVis #pureVis-settingsBtn,
+body.pureVis #pureVis-off {
+  display: block !important;
+}
+body.pureVis #pureVis-on {
+  display: none !important;
 }
